# gr8diy-web

./: .gitignore  CLAUDE.md  PRD.md  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.local.json
.claude/agents/: api-engineer.md  client-engineer.md  code-reviewer.md  db-engineer.md  doc-loader.md  performance-specialist.md  product-owner-architect.md  progress-reporter.md  qa-automation-specialist.md  security-specialist.md  ui-ux-designer.md
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/alembic/: env.py  script.py.mako
apps/api/app/alembic/versions/: .gitkeep  20251224_1303-4283aa44782d_initial_migration.py
apps/api/app/api/v1/: __init__.py  auth.py  users.py
apps/api/app/core/: config.py  deps.py  exceptions.py  rate_limit.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: user.py
apps/api/app/schemas/: user.py
apps/api/app/services/: auth.py  user.py
apps/api/scripts/: generate_jwt_key.py
apps/web/: .env.example  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
docs/: api-routes.md  authentication.md  database.md  deployment.md  frontend-architecture.md  security.md  state-management.md  ui-components.md
docs/01-overview/: index.md
docs/02-authentication/: index.md
docs/03-strategy/: index.md
docs/04-backtesting/: index.md
docs/05-blockchain/: index.md
docs/06-data/: index.md
docs/07-admin/: index.md
docs/_planning/: .gitkeep  (+3 more)
(+57 files in other folders)
